update plugin to work with leaflet-iiif and iiif manifests

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>New Tab</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
   <link rel='stylesheet' href='assets/css/base.css' />
-  <link rel='stylesheet' href='assets/css/mapbox.css' />
+  <link rel='stylesheet' href='assets/css/leaflet.css' />
   <link rel='stylesheet' href='assets/css/site.css'>
 </head>
 
